--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -8,7 +8,7 @@
   justify-content: center;
 }
 
-/* img {
+img {
   width: 50px;
   height: 50px;
   padding: 5px;
